"STYLE: Fix overflow issues"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ footer p {
 h2 {
     color: #e80815;
     text-align: center;
-    font-size: 5rem;
+    font-size: 2.5rem;
     letter-spacing: .25rem;
     padding: 2rem 0 0.9rem;
 }
